Bump Java version to 25 in modules